# rust-web-api-microservice-template

./: Cargo.toml
src/adapter/: Cargo.toml
src/adapter/src/repositories/grpc/: config.rs
src/adapter/src/repositories/grpc/models/: gpt_answer.rs
src/adapter/src/repositories/postgres/: question_db.rs
src/adapter/src/repositories/postgres/models/: question.rs
src/grpc/: Cargo.toml
src/grpc/src/interfaces/: gpt_answer.rs
src/grpc_server/: Cargo.toml
src/grpc_server/config/: 00-default.toml
src/grpc_server/src/: main.rs  options.rs
src/grpc_server/src/controllers/: gpt_answer.rs
src/public/: Cargo.toml
src/public/src/: main.rs  router.rs
src/public/src/controllers/: question.rs
src/public/tests/: questions_router_test.rs
